--- a/bulk-booking.html
+++ b/bulk-booking.html
@@ -1,129 +1,229 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
+  <!--
+    [HEAD：基本設定與 RWD]
+    - lang="zh-Hant"：主要語系為繁體中文，有助搜尋與輔助工具正確朗讀。
+    - <meta charset="UTF-8">：使用 UTF-8，避免中文亂碼。
+    - <meta name="viewport">：啟用響應式；以裝置寬度排版、初始縮放 1.0。
+    - <title>：瀏覽器分頁與搜尋結果顯示的標題字串。
+  -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>大量清洗｜自然大叔 線上預約平台</title>
+
   <style>
+    /* =========================================================
+       主題設計 Token（CSS 變數）
+       - 以 :root 定義淺色主題的顏色 Token；在 body.dark-mode 覆蓋為深色主題。
+       - 任何使用 var(--*) 的地方，會自動跟著主題切換。
+       ========================================================= */
     :root {
-      --bg-color: #ffffff;
-      --text-color: #333;
-      --card-bg: #f8f9fa;
-      --card-border: #ddd;
-      --title-color: #007BFF;
-      --button-bg: #007BFF;
-      --button-hover: #0056b3;
-      --button-text: #fff;
+      --bg-color: #ffffff;   /* 頁面背景（淺） */
+      --text-color: #333;    /* 主要文字（淺） */
+      --card-bg: #f8f9fa;    /* 卡片背景（淺） */
+      --card-border: #ddd;   /* 卡片邊框（淺） */
+      --title-color: #007BFF;/* 標題/連結主色（新版藍） */
+      --button-bg: #007BFF;  /* 主按鈕背景（淺） */
+      --button-hover: #0056b3;/* 主按鈕滑過（淺） */
+      --button-text: #fff;   /* 主按鈕文字色 */
     }
+
+    /* 深色主題 Token 覆蓋：為 <body> 加上 .dark-mode 後即生效（由 theme.js 控制） */
     body.dark-mode {
-      --bg-color: #121212;
-      --text-color: #ffffff;
-      --card-bg: #1e1e1e;
-      --card-border: #444;
-      --title-color: #4da6ff;
-      --button-bg: #4da6ff;
-      --button-hover: #1a75d1;
-      --button-text: #fff;
+      --bg-color: #121212;   /* 頁面背景（深） */
+      --text-color: #ffffff; /* 主要文字（深） */
+      --card-bg: #1e1e1e;    /* 卡片背景（深） */
+      --card-border: #444;   /* 卡片邊框（深） */
+      --title-color: #4da6ff;/* 標題/連結主色（深） */
+      --button-bg: #4da6ff;  /* 主按鈕背景（深） */
+      --button-hover: #1a75d1;/* 主按鈕滑過（深） */
+      --button-text: #fff;   /* 主按鈕文字色（深） */
     }
+
+    /* =========================================================
+       全域排版與主題套用
+       - 將版面色彩與文字顏色繫結到 Token，並加入過場動畫。
+       ========================================================= */
     body {
-      font-family: "Noto Sans TC", sans-serif;
+      font-family: "Noto Sans TC", sans-serif; /* 中文友善字型，跨平台顯示佳 */
       margin: 0;
       padding: 0;
-      background: var(--bg-color);
-      color: var(--text-color);
-      transition: background 0.3s, color 0.3s;
-      line-height: 1.6;
+      background: var(--bg-color);             /* 背景色跟隨主題 */
+      color: var(--text-color);                /* 文字色跟隨主題 */
+      transition: background 0.3s, color 0.3s; /* 主題切換時的平滑過場 */
+      line-height: 1.6;                        /* 舒適閱讀行高 */
     }
+
+    /* =========================================================
+       頁首區塊 <header>
+       - 與卡片視覺一致：使用卡片背景與底線，置中標題。
+       ========================================================= */
     header {
-      text-align: center;
-      padding: 20px;
-      background: var(--card-bg);
-      border-bottom: 1px solid var(--card-border);
+      text-align: center;                      /* 內容置中 */
+      padding: 20px;                           /* 內距 */
+      background: var(--card-bg);              /* 底色（主題化） */
+      border-bottom: 1px solid var(--card-border); /* 底線（主題化） */
     }
     header h1 {
-      color: var(--title-color);
-      margin: 0;
+      color: var(--title-color);               /* 標題主色 */
+      margin: 0;                               /* 與容器上緣貼齊更緊湊 */
     }
+
+    /* =========================================================
+       主要內容容器 <main>
+       - 控制可讀行寬，置中排版，與全域間距。
+       ========================================================= */
     main {
-      max-width: 900px;
-      margin: 20px auto;
-      padding: 20px;
+      max-width: 900px;                        /* 最大寬度（提升可讀性） */
+      margin: 20px auto;                       /* 上下外距 + 水平置中 */
+      padding: 20px;                           /* 內距 */
     }
+
+    /* 區塊標題 H2：使用主色，並拔除預設上外距（靠近容器更緊湊） */
     h2 {
       color: var(--title-color);
       margin-top: 0;
     }
+
+    /* =========================================================
+       內容段落區塊 <section>
+       - 卡片風格：圓角、邊框、卡片底色；與 header 視覺一致性。
+       ========================================================= */
     section {
       background: var(--card-bg);
       border: 1px solid var(--card-border);
       border-radius: 10px;
       padding: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 20px;                     /* 與下方元素留白 */
     }
+
+    /* =========================================================
+       多行輸入框 <textarea>
+       - 使用 box-sizing: border-box 以避免寬度溢出，並與卡片內文左右齊平。
+       - 深色模式會覆蓋背景與文字色，提升對比可讀性。
+       ========================================================= */
     textarea {
-      width: 100%;
-      min-height: 150px;
-      padding: 10px;
-      border: 1px solid var(--card-border);
-      border-radius: 6px;
-      resize: vertical;
-      background: #fff;
-      color: var(--text-color);
-      box-sizing: border-box;
+      width: 100%;                             /* 滿版寬（受父層 padding 限制） */
+      min-height: 150px;                       /* 預設高度較高，便於長字敘述 */
+      padding: 10px;                           /* 內距，避免文字貼邊 */
+      border: 1px solid var(--card-border);    /* 與卡片邊框一致 */
+      border-radius: 6px;                      /* 柔和圓角 */
+      resize: vertical;                        /* 僅允許垂直縮放，避免破版 */
+      background: #fff;                        /* 淺色模式下輸入底 */
+      color: var(--text-color);                /* 文字色跟隨主題 Token */
+      box-sizing: border-box;                  /* 寬度計算含內距與邊框 */
     }
     body.dark-mode textarea {
-      background: #2a2a2a;
-      color: #fff;
+      background: #2a2a2a;                     /* 深色輸入底 */
+      color: #fff;                              /* 深色文字 */
     }
+
+    /* =========================================================
+       導覽按鈕群 .nav-buttons
+       - 左右分散排列：回首頁 / 下一步。
+       - 使用 <a> 連結（若改動為表單提交，可替換成 <button>）。
+       ========================================================= */
     .nav-buttons {
       display: flex;
-      justify-content: space-between;
-      margin: 30px 0;
+      justify-content: space-between;          /* 兩端對齊 */
+      margin: 30px 0;                          /* 與上下內容留白 */
     }
     .nav-buttons a {
-      display: inline-block;
+      display: inline-block;                   /* 讓 padding 生效 */
       padding: 10px 18px;
-      background: var(--button-bg);
-      color: var(--button-text);
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background 0.3s;
+      background: var(--button-bg);            /* 主按鈕底色（主題化） */
+      color: var(--button-text);               /* 文字色（主題化） */
+      text-decoration: none;                   /* 去底線 */
+      border-radius: 6px;                      /* 圓角按鈕 */
+      transition: background 0.3s;             /* 滑過過場 */
     }
     .nav-buttons a:hover {
-      background: var(--button-hover);
+      background: var(--button-hover);         /* 滑過變深 */
     }
   </style>
 </head>
 <body>
+  <!--
+    [頁首區塊]
+    - 呈現頁面標題；色彩與卡片一致以維持整體視覺風格。
+  -->
   <header>
     <h1>大量清洗｜自然大叔</h1>
   </header>
 
+  <!--
+    [主內容容器]
+    - 包含說明清單、重點提示，以及實際輸入區（多台預約說明）。
+  -->
   <main>
+    <!-- 主要說明標題與適用情境清單 -->
     <h2>【整棟、民宿、房東類型大量清洗】</h2>
     <ul>
       <li>整棟大樓清洗</li>
       <li>民宿、套房集中清洗</li>
       <li>房東一次性安排多戶或多台清洗</li>
     </ul>
+
+    <!-- 重點提示：10 台以上導向使用此頁 -->
     <p>👉 如有 <strong>10 台以上</strong> 冷氣或家電清洗需求，請詳細填寫於下方說明：</p>
+
+    <!-- 引導填寫的參考條目 -->
     <ul>
       <li>冷氣清洗台數（可簡述機型與數量）</li>
       <li>聯絡方式（電話／LINE／Facebook）</li>
     </ul>
 
+    <!--
+      卡片式輸入區塊 <section>
+      - 主要讓使用者集中描述大量清洗需求；可依實際需要改為 <form> 搭配送出行為。
+    -->
     <section>
       <h2>【多台預約說明填寫】</h2>
+      <!--
+        多行輸入框：
+        - 受上方 CSS 控制，滿版寬度 + 圓角 + 舒適內距。
+        - 若要限制字數可加入 maxlength；若要自動高度可加 JS。
+      -->
       <textarea placeholder="請輸入您的需求..."></textarea>
     </section>
 
+    <!--
+      導覽按鈕群
+      - 回首頁：index.html（可依實際檔案位置調整）
+      - 下一步：前往「聯繫名稱說明」頁（contact.html）
+      - 若未來要串接後端，可將此改為「下一步送出/暫存」的按鈕行為。
+    -->
     <div class="nav-buttons">
       <a href="index.html">回首頁</a>
       <a href="contact.html">下一步 ➜ 【聯繫名稱說明】</a>
     </div>
   </main>
 
-  <!-- ✅ 引用外部深色模式 JS -->
+  <!--
+    外部主題切換腳本（選用）
+    - 若 theme.js 內含深淺色切換邏輯（為 <body> 加上/移除 .dark-mode），保留此引用即可。
+    - 若未使用主題切換，本行可刪除，不影響本頁功能。
+  -->
   <script src="theme.js"></script>
+
+  <script>
+    // =========================================================
+    // [頁面腳本預留區]
+    // - 本頁無需額外 JS 即可運作；若未來要加上：
+    //   1) 自動儲存輸入到 localStorage（避免誤刷新遺失內容）
+    //   2) 字數統計 / 限制（例如 maxlength + 即時倒數）
+    //   3) 送出前檢核（必填檢查、聯絡方式格式驗證等）
+    //   皆建議在 DOMContentLoaded 後掛載事件，避免抓不到元素。
+    // =========================================================
+
+    // document.addEventListener('DOMContentLoaded', () => {
+    //   // 例如：自動儲存
+    //   const ta = document.querySelector('textarea');
+    //   const KEY = 'bulk-notes';
+    //   ta.value = localStorage.getItem(KEY) || '';
+    //   ta.addEventListener('input', () => localStorage.setItem(KEY, ta.value));
+    // });
+  </script>
 </body>
 </html>
